# OrderBookAggregator

orderbookmerger/: Cargo.toml  build.rs
orderbookmerger/proto/: orderbook.proto
orderbookmerger/src/: client.rs  lib.rs  main.rs
