[package]
name = "orderbookmerger"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "utilities"
path = "src/lib.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]

prost = "0.6.1"
tonic = {version="0.2.0",features = ["tls"]}
tokio = {version="0.2.18",features = ["stream", "macros"]}
futures = "0.3"
url = "2.2.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tungstenite = {version = "0.16.0", features = ["native-tls"]}
ordered-float = "2.0"
clearscreen = "1.0.9"
chrono = "0.4.19"  
ctrlc = "3.4.0"
clap = { version = "3.1.6", features = ["derive"] }

[build-dependencies]
tonic-build = "0.2.0"
